[package]
name = "osm-to-sql"
version = "0.1.0"
authors = ["WhizSid <whizsid@aol.com>"]
edition = "2018"
license = "MIT"
description = "A tool to convert open street map XML data to SQL files."
readme = "README.md"
homepage = "https://github.com/whizsid/osm-to-sql"
repository = "https://github.com/whizsid/osm-to-sql"
keywords = ["cli", "osm", "open","street","map","sql","longitude","latitude","waypoint","converter"]
categories = ["command-line-utilities"]

[dependencies]
quick-xml = "0.16.1"

[package.metadata.deb]
maintainer = "WhizSid <whizsid@aol.com>"
copyright = "2019, WhizSid <whizsid@aol.com>"
license-file = ["LICENSE"]
depends = "$auto"
extended-description = """\
A command line tool to convert open street map data to SQL files."""